[gd_scene load_steps=10 format=2]

[ext_resource path="res://scripts/crusher_obstacle.gd" type="Script" id=1]
[ext_resource path="res://materials/shaders/blinn.shader" type="Shader" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 6, 2, 2 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/albedo = Color( 0.984314, 1, 0.886275, 1 )
shader_param/specular_power = 200.0
shader_param/uv1_scale = Vector3( 1, 1, 1 )
shader_param/uv1_offset = Vector3( 0, 0, 0 )
shader_param/uv2_scale = Vector3( 1, 1, 1 )
shader_param/uv2_offset = Vector3( 0, 0, 0 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 7, 1, 1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 1, 5, 5 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 0.5, 2.5, 1.5 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 6.5, 1.5, 1.5 )

[sub_resource type="BoxShape" id=7]
extents = Vector3( 0.4, 2.2, 1 )

[node name="CrusherObstacle" type="Spatial"]
script = ExtResource( 1 )

[node name="Left" type="Spatial" parent="."]

[node name="Housing" type="MeshInstance" parent="Left"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -11, 0, 1 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Piston" type="Spatial" parent="Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Pipe" type="MeshInstance" parent="Left/Piston"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -4.5, 0, 1 )
mesh = SubResource( 3 )
material/0 = SubResource( 2 )

[node name="Plate" type="MeshInstance" parent="Left/Piston"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="Colliders" type="StaticBody" parent="Left/Piston"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Left/Piston/Colliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="Left/Piston/Colliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 0, 0 )
shape = SubResource( 6 )

[node name="DangerArea" type="Area" parent="Left/Piston"]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Left/Piston/DangerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0 )
shape = SubResource( 7 )

[node name="ExtendedPosition" type="Spatial" parent="Left"]

[node name="RetractedPosition" type="Spatial" parent="Left"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )

[node name="Right" type="Spatial" parent="."]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Housing" type="MeshInstance" parent="Right"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -11, 0, 1 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Piston" type="Spatial" parent="Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Pipe" type="MeshInstance" parent="Right/Piston"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, -4.5, 0, 1 )
mesh = SubResource( 3 )
material/0 = SubResource( 2 )

[node name="Plate" type="MeshInstance" parent="Right/Piston"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 1 )
mesh = SubResource( 4 )
material/0 = SubResource( 2 )

[node name="Colliders" type="StaticBody" parent="Right/Piston"]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Right/Piston/Colliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
shape = SubResource( 5 )

[node name="CollisionShape2" type="CollisionShape" parent="Right/Piston/Colliders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.5, 0, 0 )
shape = SubResource( 6 )

[node name="DangerArea" type="Area" parent="Right/Piston"]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="Right/Piston/DangerArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4, 0, 0 )
shape = SubResource( 7 )

[node name="ExtendedPosition" type="Spatial" parent="Right"]

[node name="RetractedPosition" type="Spatial" parent="Right"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="Left/Piston/DangerArea" to="." method="on_player_entered_left_piston_area"]
[connection signal="body_exited" from="Left/Piston/DangerArea" to="." method="on_player_exited_left_piston_area"]
[connection signal="body_entered" from="Right/Piston/DangerArea" to="." method="on_player_entered_right_piston_area"]
[connection signal="body_exited" from="Right/Piston/DangerArea" to="." method="on_player_exited_right_piston_area"]
[connection signal="tween_all_completed" from="Tween" to="." method="on_tween_completed"]
